adjusted font rules to prevent shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,7 +11,6 @@ main {
   height: auto;
   margin: 0 auto;
   transition: none;
-  /* prevent animation shift */
 }
 
 .main-60 {
@@ -23,7 +22,6 @@ main {
   width: 80%;
   max-width: 80vw;
 }
-
 
 *,
 body,
@@ -55,17 +53,6 @@ body {
   transition: none !important;
   font-size: 1rem;
   line-height: 1.5;
-}
-
-body:not(.fonts-loaded) {
-  visibility: hidden;
-}
-
-body.fonts-loaded h1,
-body.fonts-loaded h2 {
-  opacity: 1;
-  visibility: visible;
-  transition: opacity 0.3s ease-in;
 }
 
 h1,
